<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="_3">3</string>
    <string name="_3_points">+3 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="free_throw">free throw</string>
    <string name="_0">0</string>
    <string name="team_b">Team B</string>
    <string name="reset">reset</string>
</resources>