<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/score_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight=" 5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#616161"
                android:layout_marginTop="16dp"
                android:text="@string/team_a" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/_0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:onClick="addThreeForTeamA"
                android:text="@string/_3_points"
                android:textAllCaps="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:onClick="addTwoForTeamA"
                android:text="@string/_2_points"
                android:textAllCaps="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:onClick="addOneForTeamA"
                android:text="@string/free_throw"
                android:textAllCaps="true" />


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight=" 5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#616161"
                android:text="@string/team_b" />

            <TextView
                android:id="@+id/team_b_score"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/_0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:onClick="addThreeForTeamB"
                android:text="@string/_3_points"
                android:textAllCaps="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:onClick="addTwoForTeamB"
                android:text="@string/_2_points"
                android:textAllCaps="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:onClick="addOneForTeamB"
                android:text="@string/free_throw"
                android:textAllCaps="true" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScores"
        android:text="@string/reset"
        android:textAllCaps="true" />
</RelativeLayout>
